@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-01T01:24:39Z",
-  "count_outdated" : 490,
-  "uniques_outdated" : 283,
-  "count" : 518,
-  "uniques" : 300,
+  "timestamp" : "2022-09-01T08:22:18Z",
+  "count_outdated" : 491,
+  "uniques_outdated" : 284,
+  "count" : 519,
+  "uniques" : 301,
   "clones" : [
-    {
-      "timestamp": "2022-08-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-08-20T00:00:00Z",
       "count": 3,
@@ -95,6 +88,13 @@
       "count_minmax": [ 1, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
+    },
+    {
+      "timestamp": "2022-09-01T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
