@@ -1,3 +1,11 @@
+2022-09-01T08:22:18Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2970040392
+* notice: last 14d: unq all: 5 28
+* notice: prev accum: outdated-unq outdated-all / unq all: 283 490 / 300 518
+* notice: next accum: outdated-unq outdated-all / unq all: 284 491 / 301 519
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2022-08-18] / [2022-09-01]
+
 2022-09-01T01:24:39Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2968226839
 * notice: last 14d: unq all: 6 28
